--- a/boothAssignment.html
+++ b/boothAssignment.html
@@ -12,25 +12,24 @@
 <body>
     <div class="container">
         <div id="form-wrapper">
-
             <div class="column">
                 <form>
                     <h2>Exhibitor</h2>
                     <div>
-                        <input type="text" id="myInput" placeholder="Search for Exhibitor" /><br>
+                        <input type="text" id="inputSearch" placeholder="Search for Exhibitor" /><br>
                         <div>
                             <span class="indicator indiex"></span> <label>Exhibitor</label>
                             <span class="indicator indiasb"></span> <label>Existing Exhibitor</label>
                             <span class="indicator indibss"></span> <label>Business Solution Services</label>
                         </div>
                     </div>
-                    <table id="myTable">
+                    <table id="exhibitorsTable">
                         <tbody>
                             <tr>
                                 <td>
                                     <label for="frm">
-                                        <input type="checkbox" value="First Resources Management" name="chkbx[]"
-                                            onclick="myfun(event)" id="frm">
+                                        <input class="checkbox" type="checkbox" value="First Resources Management"
+                                            id="frm">
                                         First Resources Management <span class="indicator indiex"></span>
                                     </label>
                                 </td>
@@ -38,8 +37,8 @@
                             <tr>
                                 <td>
                                     <label for="pse">
-                                        <input type="checkbox" value="Philippine Stock Exchange" name="chkbx[]"
-                                            onclick="return myfun(event)" id="pse">
+                                        <input class="checkbox" type="checkbox" value="Philippine Stock Exchange"
+                                            id="pse">
                                         Philippine Stock Exchange <span class="indicator indibss"></span>
                                     </label>
                                 </td>
@@ -47,8 +46,7 @@
                             <tr>
                                 <td>
                                     <label for="smfc">
-                                        <input type="checkbox" value="San Miguel Food Corp." name="chkbx[]"
-                                            onclick="return myfun(event)" id="smfc">
+                                        <input class="checkbox" type="checkbox" value="San Miguel Food Corp." id="smfc">
                                         San Miguel Food Corp.
                                     </label>
                                 </td>
@@ -56,8 +54,7 @@
                             <tr>
                                 <td>
                                     <label for="mhq">
-                                        <input type="checkbox" value="Mangga Head Quarters" name="chkbx[]"
-                                            onclick="return myfun(event)" id="mhq">
+                                        <input class="checkbox" type="checkbox" value="Mangga Head Quarters" id="mhq">
                                         Mangga Head Quarters
                                     </label>
                                 </td>
@@ -65,8 +62,7 @@
                             <tr>
                                 <td>
                                     <label for="kaakbay">
-                                        <input type="checkbox" value="Kaakbay" name="chkbx[]"
-                                            onclick="return myfun(event)" id="kaakbay">
+                                        <input class="checkbox" type="checkbox" value="Kaakbay" id="kaakbay">
                                         Kaakbay
                                     </label>
                                 </td>
@@ -74,8 +70,8 @@
                             <tr>
                                 <td>
                                     <label for="mnlcityhall">
-                                        <input type="checkbox" value="Youth Development and Welfare Bureau"
-                                            name="chkbx[]" onclick="return myfun(event)" id="mnlcityhall">
+                                        <input class="checkbox" type="checkbox"
+                                            value="Youth Development and Welfare Bureau" id="mnlcityhall">
                                         Youth Development and Welfare Bureau <span class="indicator indiasb"></span>
                                     </label>
                                 </td>
@@ -83,8 +79,7 @@
                             <tr>
                                 <td>
                                     <label for="sginc">
-                                        <input type="checkbox" value="Seller Gateway Inc." name="chkbx[]"
-                                            onclick="return myfun(event)" id="sginc">
+                                        <input class="checkbox" type="checkbox" value="Seller Gateway Inc." id="sginc">
                                         Seller Gateway Inc.
                                     </label>
                                 </td>
@@ -92,8 +87,7 @@
                             <tr>
                                 <td>
                                     <label for="ranns">
-                                        <input type="checkbox" value="Rann-S" name="chkbx[]"
-                                            onclick="return myfun(event)" id="ranns">
+                                        <input class="checkbox" type="checkbox" value="Rann-S" id="ranns">
                                         Rann-S
                                     </label>
                                 </td>
@@ -101,8 +95,7 @@
                             <tr>
                                 <td>
                                     <label for="everise">
-                                        <input type="checkbox" value="Everise" name="chkbx[]"
-                                            onclick="return myfun(event)" id="everise">
+                                        <input class="checkbox" type="checkbox" value="Everise" id="everise">
                                         Everise
                                     </label>
                                 </td>
@@ -110,21 +103,16 @@
                             <tr>
                                 <td>
                                     <label for="citem">
-                                        <input type="checkbox" value="Citem" name="chkbx[]"
-                                            onclick="return myfun(event)" id="citem">
+                                        <input class="checkbox" type="checkbox" value="Citem" id="citem">
                                         Citem
                                     </label>
                                 </td>
                             </tr>
-
-
-
-
                             <tr>
                                 <td>
                                     <label for="dswd">
-                                        <input type="checkbox" value="Department of Social Welfare and Development"
-                                            name="chkbx[]" onclick="return myfun(event)" id="dswd">
+                                        <input class="checkbox" type="checkbox"
+                                            value="Department of Social Welfare and Development" id="dswd">
                                         Department of Social Welfare and Development
                                     </label>
                                 </td>
@@ -133,23 +121,17 @@
                     </table>
                 </form>
             </div>
-
-
             <div class="column">
                 <form action="">
                     <table id="selectedDataTable">
                         <h2>Selected Exhibitor</h2>
-                        <tbody id="selectedData">
+                        <tbody id="selectedExhibitors">
                         </tbody>
                     </table>
                 </form>
-
             </div>
         </div>
     </div>
-
-
-
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="boothAssignment.js"></script>
