--- a/boothAssignment.html
+++ b/boothAssignment.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="container container-fluid">
-        <div id="form-wrapper" >
+        <div id="form-wrapper">
             <form>
                 <div class="col-md-6">
                     <div id="searchExhibitor" class="col-lg-12">
@@ -139,9 +139,10 @@
                 </div>
 
                 <div class="col-md-12">
-                    <div  id="exhibitorBoothNumber">
+                    <div id="exhibitorBoothNumber">
                         <label>Booth Number</label><br>
-                        <select id="multiple" class="js-states form-control js-example-responsive"  style="width: 100%;" multiple style="font-size: 16px;">
+                        <select id="multiple" class="js-states form-control js-example-responsive" style="width: 100%;"
+                            multiple style="font-size: 16px;">
                             <option>Both# 1</option>
                             <option>Both# 2</option>
                             <option>Both# 3</option>
@@ -172,6 +173,11 @@
             allowClear: true,
         });
 
+        $("#multiple").on("select2:open", function (e) {
+            // Clear the input search exhibitor
+            $("#inputSearch").val("");
+            $("#exhibitorsTable tbody tr").removeClass("visible");
+        });
     </script>
 
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
