Done when input search dropdown is open select2 will not overlaped, responsive form

--- a/boothAssignment.html
+++ b/boothAssignment.html
@@ -177,6 +177,7 @@
             // Clear the input search exhibitor
             $("#inputSearch").val("");
             $("#exhibitorsTable tbody tr").removeClass("visible");
+            $("#exhibitorsTable").height("0px");
         });
     </script>
 
